passport authentication added

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -6,7 +6,7 @@
       <li><a href="/contacts">Contacts</a></li>
       <li><a href="/users/logout">Logout</a></li>
       <li id="avatar">
-        <h3>Name: <%= user.name %></h3>
+        <h3>Name: <%=  %></h3>
       </li>
     </ul>
   </nav>
