--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 <%- include('navbar') %>
 <div id="profile-container">
-  <h3>Name: <%= user.name %></h3>
-  <p>Email: <%= user.email %></p>
+  <h3>Name: <%=  %></h3>
+  <p>Email: <%=  %></p>
 </div>
 <%- include('./partials/footer') %>
