--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,16 +1,16 @@
-* {
+*{
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto'; }
-
-body {
-  background-color: #eee; }
-
-#container {
+  font-family: 'Roboto';
+}
+body{
+  background-color: #eee;
+}
+#container{
   width: 80%;
-  margin: 0 auto; }
-
-.form-container {
+  margin: 0 auto;
+}
+.form-container{
   background-color: #fff;
   width: 400px;
   margin: 5rem auto;
@@ -19,24 +19,24 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); }
-
-.form-container h1 {
-  color: #f1356d;
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
+.form-container h1{
+  color:#f1356d;
   text-transform: uppercase;
-  margin: 1rem; }
-
-input {
+  margin: 1rem;
+}
+input{
   padding: 0.5rem;
   font-size: 1.2rem;
   margin: 1rem;
   border: none;
-  border-bottom: 1px solid grey; }
-
-input:focus {
-  outline: none; }
-
-button {
+  border-bottom: 1px solid grey;
+}
+input:focus{
+  outline: none;
+}
+button{
   padding: 0.5rem;
   font-size: 1.2rem;
   font-weight: bold;
@@ -46,34 +46,37 @@ button {
   color: #fff;
   border-radius: 4px;
   margin: 1rem;
-  cursor: pointer; }
-
+  cursor: pointer;
+}
 /* navbar styles */
-header {
+header{
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   padding: 1rem;
-  border-bottom: 1px solid lightgrey; }
+  border-bottom: 1px solid lightgrey;
+}
+header h1{
+  color:#f1356d;
+  letter-spacing: 0.5px;
 
-header h1 {
-  color: #f1356d;
-  letter-spacing: 0.5px; }
+}
+header nav{
+  margin-left: auto;
 
-header nav {
-  margin-left: auto; }
-
-header nav ul {
+}
+header nav ul{
   list-style: none;
-  display: flex; }
-
-#navigation li a {
+  display: flex;
+}
+#navigation li a{
   display: inline-block;
   color: grey;
   margin: 0 1rem;
   font-size: 1.2rem;
-  text-decoration: none; }
-
-#navigation li a:hover {
-  color: #f1356d; }
+  text-decoration: none;
+}
+#navigation li a:hover{
+  color:#f1356d;
+}
