--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,69 @@ header nav ul {
 
 #navigation li a:hover {
   color: #f1356d; }
+
+#feed-posts {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem; }
+  #feed-posts h4 {
+    color: #f1356d;
+    font-size: 1.2rem; }
+  #feed-posts input[type=submit] {
+    border: 2px solid lightgrey;
+    background-color: #f1356d;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px; }
+  #feed-posts #new-post-form {
+    display: flex;
+    align-items: center; }
+  #feed-posts #new-post-form textarea {
+    border: none;
+    border-bottom: 2px solid #ddd;
+    height: 50px;
+    background-color: #ddd;
+    padding: 0.5rem;
+    font-size: 1.2rem; }
+  #feed-posts #new-post-form textarea:focus {
+    outline: none; }
+
+.posts {
+  display: flex;
+  flex-direction: column; }
+  .posts .post-item {
+    width: 450px;
+    margin: 0.5rem 0px;
+    padding: 0.8rem 0.5rem 0px;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    border-radius: 4px; }
+    .posts .post-item .post-content {
+      color: #f1356d;
+      padding: 0.5rem; }
+    .posts .post-item .post-date {
+      font-size: 0.9rem;
+      color: #555;
+      padding: 0.5rem; }
+      .posts .post-item .post-date span {
+        font-weight: bold;
+        margin-right: 0.5rem; }
+  .posts .post-options {
+    border-top: 1px solid #ddd;
+    margin-top: 0.5rem;
+    padding: 0.3rem 0px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
+    .posts .post-options p {
+      color: #f1356d;
+      font-size: 1rem;
+      padding: 0.5rem 2rem;
+      font-weight: bold; }
+      .posts .post-options p:hover {
+        background-color: #ddd;
+        border-radius: 8px;
+        cursor: pointer; }
+    .posts .post-options span {
+      display: inline-block;
+      margin: 0.5rem; }
