--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,43 +1,66 @@
 <%- include('./partials/header') %>
 <%- include('navbar') %>
-<section id="feed-posts">
-  <h4>Posts</h4>
-  <% if(locals.user){%>
-  <form action="/posts/create" id="new-post-form" method="POST">
-    <textarea name="content" cols="30" row="3"></textarea>
-    <input type="submit" value="POST">
-  </form>
-  <% } %>
-  <% if(posts.length  != 0 ){ %>
-    <div class="posts">
-      <% posts.forEach(function(post) { %>
-        <div class="post-item">
-          <h3 class="post-content"><%= post.content %></h3>
-          <p class="post-date"><span><%= post.user.name %></span><%= post.createdAt.toDateString() %> </p>
-          <div class="post-options">
-            <p><span><i class="fas fa-thumbs-up"></i></span> Like</p>
-            <p><span><i class="fas fa-comment"></i></span>Comment</p>
-            <p><span><i class="fas fa-share"></i></span>Share</p>
-          </div>
-          <div class="post-comments">
-            <% if(locals.user){%>
-            <form class="new-comment-form" action="/comments/create" method="POST">
-              <input type="text" name="content" id="" placeholder="Write a comment...">
-              <input type="hidden" name="post" value="<%= post._id %>">
-            </form>
+<link rel="stylesheet" href="/css/home.css">
+<div id="home-container">
+  <section id="feed-posts">
+    <h4>Posts</h4>
+    <% if(locals.user){%>
+    <form action="/posts/create" id="new-post-form" method="POST">
+      <textarea name="content" cols="30" row="3"></textarea>
+      <input type="submit" value="POST">
+    </form>
+    <% } %>
+    <% if(posts.length  != 0 ){ %>
+      <div class="posts">
+        <% posts.forEach(function(post) { %>
+          <div class="post-item">
+            <h3 class="post-content">
+              <%= post.content %>
+              <% if((locals.user) && (locals.user.id == post.user.id)){ %>
+            <small style="position: relative;left: 20rem;"><a href="/posts/destroy/<%= post.id %>"><i class="fas fa-trash-alt"></i></a></small>
             <% } %>
-            <% if(post.comments.length != 0) {%>
-              <% post.comments.forEach(function(comment){ %>
-              <div class="post-comment-item">
-                <h4><%= comment  %></h4>
-                <p><%= comment.content  %></p>
-              </div>
-                <% }) %>
-            <% } %>
+            </h3>
+            <p class="post-date"><span><%= post.user.name %></span><%= post.createdAt.toDateString() %> </p>
+            <div class="post-options">
+              <p><span><i class="fas fa-thumbs-up"></i></span>Like</p>
+              <p><span><i class="fas fa-comment"></i></span>Comment</p>
+              <p><span><i class="fas fa-share"></i></span>Share</p>
+            </div>
+            <div class="post-comments">
+              <% if(locals.user){%>
+              <form class="new-comment-form" action="/comments/create" method="POST">
+                <input type="text" name="content" id="" placeholder="Write a comment..." required >
+                <input type="hidden" name="post" value="<%= post._id %>">
+              </form>
+              <% } %>
+              <% if(post.comments.length != 0) {%>
+                <div class="post-comment-list">
+                  <% post.comments.forEach(function(comment){ %>
+                  <div class="post-comment-item">
+                     <% if((locals.user) && (locals.user.id == comment.user.id)){ %>
+                      <small style="position: relative;left: 20rem;"><a href="/comments/destroy/<%= comment.id %>"><i class="fas fa-trash-alt"></i></a></small>
+                      <% } %>
+                    <p><%= comment.content  %></p>
+                    <small>
+                      <%= comment.user.name %>
+                    </small>
+                  </div>
+                  <br>
+                    <% }) %>
+                </div>
+              <% } %>
+            </div>
           </div>
-        </div>
-        <% }) %>
-    </div>
-  <% } %>
-</section>
+          <% }) %>
+      </div>
+    <% } %>
+  </section>
+  <section id="user-friends">
+    <h3>Friends</h3>
+    <br>
+    <% for(u of all_users){ %>
+      <p><a href="/users/profile/<%= u.id %>"><%= u.name %></a></p>
+    <% } %>
+  </section>
+</div>
 <%- include('./partials/footer') %>
