--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -19,3 +19,19 @@
   0%,100% { opacity: 0 }
   20% { opacity: 1 }
 }
+#navigation{
+  ul{
+    li{
+      align-self: center;
+    }
+  }
+  #avatar{
+    display: flex;
+    align-items: center;
+    img{
+      border-radius: 50%;
+      width: 45px;
+    }
+  }
+
+}
