--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,10 +1,12 @@
 <%- include('./partials/header') %>
 <%- include('navbar') %>
+<img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
 <% if(user.id == profile_user.id){ %>
   <!-- if user matches then show the form -->
-  <form action="/users/profile/<%= profile_user.id %>" method="POST">
+  <form action="/users/profile/<%= profile_user.id %>" method="POST" enctype="multipart/form-data">
     <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name%>" required>
     <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email%>" required>
+    <input type="file" name="avatar" placeholder="Profile picture">
     <input type="submit" value="Submit">
   </form>
 <% } else { %>
