--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,5 +8,8 @@
     <input type="password" name="password" value="" placeholder="Password">
   </div>
   <button>Submit</button>
+   <p>
+    <a href="/users/auth/google">Google Sign In/Sign Up</a>
+  </p>
 </form>
 <%- include('./partials/footer') %>
