--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,5 +14,8 @@
     <input type="password" name="confirm_password" value="" placeholder="Confirm password">
   </div>
   <button>Submit</button>
+  <p>
+    <a href="/users/auth/google">Google Sign In/Sign Up</a>
+  </p>
 </form>
 <%- include('./partials/footer') %>
