--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,6 +3,8 @@
   #home-container #feed-posts {
     width: 70%;
     padding: 10px; }
+  #home-container .post-comment-list {
+    padding: 10px; }
   #home-container #user-friends {
     width: 30%;
     padding: 10px;
