--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -5,6 +5,9 @@
     width: 70%;
     padding: 10px;
   }
+  .post-comment-list{
+    padding: 10px;
+  }
   #user-friends{
     width: 30%;
     padding: 10px;
